--- a/mobile.html
+++ b/mobile.html
@@ -1107,10 +1107,10 @@
                                 </div>
                                 <div class="eval-row">
                                     <span class="eval-label">Eval:</span> 
-                                    <span class="eval-before">${(parseFloat(move.Stockfish_Eval_Before) || 0).toFixed(2)}</span>
+                                    <span class="eval-before">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
-                                    <span class="eval-after">${(parseFloat(move.Stockfish_Eval_After) || 0).toFixed(2)}</span>
-                                    <span class="eval-drop">(${(parseFloat(move.Stockfish_Eval_Drop) || 0).toFixed(2)})</span>
+                                    <span class="eval-after">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
+                                    <span class="eval-drop">(${(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)})</span>
                                     <button class="lichess-button-small" onclick="window.open('${generateLichessUrl(move.Position, move.Move)}', '_blank')">
                                         🔍
                                     </button>
