--- a/mobile.html
+++ b/mobile.html
@@ -468,7 +468,7 @@
             cursor: pointer;
             transition: all 0.2s;
             font-size: 0.8em;
-            margin-left: 8px;
+            margin-right: 8px;
         }
 
         .lichess-button-small:hover {
@@ -1099,14 +1099,14 @@
                                     <div class="move-number">Move #${getMoveNumberFromFEN(move.Position) || move.Move_Number || 'N/A'}</div>
                                 </div>
                                 <div class="eval-row">
+                                    <button class="lichess-button-small" onclick="window.open('${generateLichessUrl(move.Position, move.Move)}', '_blank')">
+                                        🔍
+                                    </button>
                                     <span class="eval-label">Eval:</span> 
                                     <span class="eval-before">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
                                     <span class="eval-after">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
                                     <span class="eval-drop">(${(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)})</span>
-                                    <button class="lichess-button-small" onclick="window.open('${generateLichessUrl(move.Position, move.Move)}', '_blank')">
-                                        🔍
-                                    </button>
                                 </div>
                             </div>
                         </div>
