Remove negative signs from eval drop to show absolute difference in pawns

--- a/mobile.html
+++ b/mobile.html
@@ -1106,7 +1106,7 @@
                                     <span class="eval-before">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
                                     <span class="eval-after">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
-                                    <span class="eval-drop">(${(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)})</span>
+                                    <span class="eval-drop">(${Math.abs(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)})</span>
                                 </div>
                             </div>
                         </div>
