--- a/mobile.html
+++ b/mobile.html
@@ -460,7 +460,7 @@
 
         .lichess-button-small {
             padding: 6px 10px;
-            background: #918C7D;
+            background: #BC9B79;
             color: white;
             border: none;
             border-radius: 4px;
