--- a/mobile.html
+++ b/mobile.html
@@ -1106,10 +1106,10 @@
                                         🔍
                                     </button>
                                     <span class="eval-label">Eval:</span> 
-                                    <span class="eval-after">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
+                                    <span class="eval-after">${(parseFloat(move.Your_Move_Eval) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
-                                    <span class="eval-before">${(parseFloat(move.Original_Eval_After) - (parseFloat(move.Stockfish_Eval_Drop || 0) / 100)).toFixed(2)}</span>
-                                    <span class="eval-drop">(${Math.abs(parseFloat(move.Stockfish_Eval_Drop || 0) / 100).toFixed(2)})</span>
+                                    <span class="eval-before">${(parseFloat(move.Best_Move_Eval) || 0).toFixed(2)}</span>
+                                    <span class="eval-drop">(${Math.abs(parseFloat(move.Eval_Difference) || 0).toFixed(2)})</span>
                                 </div>
                             </div>
                         </div>
