--- a/mobile.html
+++ b/mobile.html
@@ -1275,7 +1275,7 @@
         async function loadData() {
             try {
                 console.log('Starting to load CSV...');
-                const response = await fetch('repeated_moves_deterministic_analysis.csv');
+                const response = await fetch('repeated_moves_working.csv');
                 console.log('Response status:', response.status);
                 
                 if (!response.ok) {
