--- a/mobile.html
+++ b/mobile.html
@@ -1105,11 +1105,11 @@
                                     <button class="lichess-button-small" onclick="window.open('${generateLichessUrl(move.Position, move.Move)}', '_blank')">
                                         🔍
                                     </button>
-                                    <span class="eval-label">Eval:</span> 
-                                    <span class="eval-after">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
-                                    <span class="eval-arrow">→</span>
-                                    <span class="eval-before">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
-                                    <span class="eval-drop">(${Math.abs(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)})</span>
+                                                                                                                    <span class="eval-label">Eval:</span> 
+                                        <span class="eval-after">${(parseFloat(move.Your_Move_Eval) || 0).toFixed(2)}</span>
+                                        <span class="eval-arrow">→</span>
+                                        <span class="eval-before">${(parseFloat(move.Best_Move_Eval) || 0).toFixed(2)}</span>
+                                        <span class="eval-drop">(${Math.abs(parseFloat(move.Eval_Difference) || 0).toFixed(2)})</span>
                                 </div>
                             </div>
                         </div>
@@ -1231,7 +1231,7 @@
         async function loadData() {
             try {
                 console.log('Starting to load CSV...');
-                const response = await fetch('repeated_moves_stockfish_analysis_with_images_fixed.csv');
+                const response = await fetch('repeated_moves_merged.csv');
                 console.log('Response status:', response.status);
                 
                 if (!response.ok) {
