--- a/mobile.html
+++ b/mobile.html
@@ -429,7 +429,7 @@
         }
 
         .eval-drop.inaccuracy {
-            color: #FF9800; /* Orange for Inaccuracy */
+            color: #FFC107; /* Yellow for Inaccuracy */
         }
 
         .eval-drop.mistake {
