--- a/mobile.html
+++ b/mobile.html
@@ -433,7 +433,7 @@
         }
 
         .eval-drop.mistake {
-            color: #FF5722; /* Red-Orange for Mistake */
+            color: #FF9800; /* Orange for Mistake */
         }
 
         .eval-drop.blunder {
