Update mobile site side filter buttons: grey border and purple active state

--- a/mobile.html
+++ b/mobile.html
@@ -140,25 +140,25 @@
         .button-white {
             background: white;
             color: #333;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
         }
 
         .button-white.active {
             background: #9C27B0 !important;
             color: white !important;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
         }
 
         .button-black {
             background: #333;
             color: white;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
         }
 
         .button-black.active {
             background: #9C27B0 !important;
             color: white !important;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
         }
 
         /* Override the general active state for side buttons */
@@ -166,7 +166,7 @@
         .filter-button.button-black.active {
             background: #9C27B0 !important;
             color: white !important;
-            border: 2px solid #333 !important;
+            border: 2px solid #e0e0e0 !important;
         }
 
         .slider-container {
